Fix scroll on mobile

--- a/source/stylesheets/_common.sass
+++ b/source/stylesheets/_common.sass
@@ -9,7 +9,7 @@ html, body
   height: 100%
   min-width: 100%
   min-height: 100%
-  overflow: auto
+  -webkit-overflow-scrolling: touch
 
 body
   font-family: 'RadikalCss', sans-serif
